# tllm-2026-experiments

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  REPRODUCIBILITY.md  pyproject.toml  requirements.txt  setup_venv.sh
analysis/: README.md  bootstrap_diagnostic_ci.py  confidence_by_bilateral_bucket.py  decision_rule.py  make_migration_figure.py  make_src_vs_modal_figure.py  make_tv_diagnostic_figure.py  recompute_decision_rule.py  visualize_bilattice_heatmap.py  visualize_full_comparison.py  visualize_modal_distributions.py  visualize_proper_pilot.py  visualize_src_vs_modal.py  visualize_tv_diagnostic.py  visualize_tv_distributions.py
audit/: AUDIT_REPORT.md  CACHE_NOTES.md  LABELING_GUIDE.md  audit_results.json  compute_audit_stats.py  edge_audit_sample.csv  make_audit_sample.py  paper_sentence.tex  sample_manifest.json
datasets/: MANIFEST.json  README.md  STANDARD_FORMAT.md  mmlupro_complete.json  truthfulqa_complete.json
docs/: benchmark_provenance.md  lfs_setup.md  methodology.md
evaluators/: README.md  modal_evaluator.py  pregenerate_variants.py  proper_benchmark_evaluator.py  run_modal_suite.py
prompts/: 2025_prompts.md  2026_prompts.md
results/: README.md
talk/: README.md  tllm2026.aux  tllm2026.nav  tllm2026.tex  tllm2026.vrb
tests/: test_evaluator_smoke.py  test_manifest_integrity.py  test_prompt_drift.py  test_result_schemas.py
variant_cache/: MANIFEST.json  README.md  factscore_n3_variants.json  mmlu-pro_n3_variants.json  simpleqa_n3_variants.json  truthfulqa_n3_variants.json
(+187 files in other folders)
