[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tllm-2026-experiments"
version = "1.0.0"
description = "Dataset of record for bilateral modal logic factuality evaluation experiments (BBL paper, 2026)"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Bradley Allen", email = "b.p.allen@uva.nl"},
]

# The 2026 experiments pin bilateral-truth to the exact commit that produced the
# evidence-based ternary prompt and n=3 bilateral majority voting (commit b71915f).
# The 2025 experiments used commit 8545986; reproducing them requires switching
# to that SHA. See CHANGELOG.md.
dependencies = [
    "bilateral-truth @ git+https://github.com/bradleypallen/bilateral-truth.git@b71915fda6faf252cdb506294e0b9c5e04511d5e",
    "openai>=1.0.0",
    "anthropic>=0.3.0",
    "requests>=2.25.0",
    "python-dotenv>=0.19.0",
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
]

[tool.setuptools]
# This repo ships data and scripts, not an importable package.
packages = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v"
